# ocaml-protoc-plugin

./: ocaml-protoc-plugin.opam
examples/echo/: dune
examples/echo_deriving/: dune
examples/echo_deriving/google_types_deriving/: dune
examples/extensions/: dune
src/google_types/: dune
test/: dune
