(executable
 (name        test)
 (libraries   ocaml-protoc-plugin ocaml-protoc-plugin.google_types unix)
)

(rule
 (targets google_include)
 (action (with-stdout-to %{targets}
          (run conf-protobuf -variable=include-path))))

(rule
 (targets echo.ml)
 (deps
  (:proto echo.proto) (package ocaml-protoc-plugin))
 (action
  (run protoc -I %{read-lines:google_include} -I . "--ocaml_out=open=Google_types:." %{proto})))

(alias
 (name runtest)
 (deps test.exe)
)
